add moviedetail styles

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>MovieTracker</title>
     <link rel="stylesheet" type="text/css" href="/main.css">
+    <link rel="shortcut icon" href="%PUBLIC_URL%/http://www.pd4pic.com/images/film-reel-cinema-film-motion-movie-filmrolle.png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
