--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>MovieTracker</title>
     <link rel="stylesheet" type="text/css" href="/main.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" href="https://cdn4.iconfinder.com/data/icons/pictograms-1/512/Video-512.png">
+
   </head>
   <body>
     <div id='main'></div>
