--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
   </head>
   <body>
     <div id='main'></div>
-    <script src='bundle.js'></script>
+    <script src='./app/bundle.js'></script>
   </body>
 </html>
