correct stylesheet url

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>MovieTracker</title>
-    <link rel="stylesheet" type="text/css" href="/main.css">
+    <link rel="stylesheet" type="text/css" href="./app/main.css">
     <link rel="shortcut icon" href="%PUBLIC_URL%/http://www.pd4pic.com/images/film-reel-cinema-film-motion-movie-filmrolle.png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="https://cdn4.iconfinder.com/data/icons/pictograms-1/512/Video-512.png">
